# proctr

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clear_cmake.sh  cmake_install.cmake  install_deps.sh  travis.yml
include/proctr/: active_rebalancing.hpp  correlations.hpp  data_reader.hpp  graph.hpp  graph_reader.hpp  ilp.hpp  kde.hpp  passive_rebalancing.hpp  planner.hpp  predictor.hpp  prior.hpp  proctr.hpp  rate_filter.hpp  rebalancer.hpp  route.hpp  route_hash.hpp  route_table.hpp  simulator.hpp  vehicle.hpp
notebooks/: check_new_data.ipynb  check_rates.ipynb
sandbox/: freqs.csv  requests.csv  taxis.csv
src/: CMakeLists.txt  Makefile  active_rebalancing.cpp  active_rebalancing.jl  cmake_install.cmake  correlations.cpp  data_reader.cpp  graph_reader.cpp  kde.cpp  passive_rebalancing.cpp  passive_rebalancing.jl  planner.cpp  prior.cpp  rate_filter.cpp  rebalancer.cpp  route.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  correlations_test.cpp  graph_test.cpp  ilp_test.cpp  planner_test.cpp  predictor_test.cpp  prior_test.cpp  route_table_test.cpp  route_test.cpp  run_tests  run_tests.cpp
test/data/: mean_cors.npy  stds.npy  test_not_2d.npy  test_not_equal.npy  volume.npy
writeup/: README.md  bib.bib  paper.aux  paper.bbl  paper.blg  paper.tex
